<resources>
    <string name="app_name">NewsApi</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- fragment_search -->
    <string name="title">Search Fragment</string>
    <string name="search">Ara</string>
    <string name="lng_lng">TR/TR</string>
    <string name="search_content">İçerikte Ara</string>
    <string name="search_titles">Başlıklarda Ara</string>
    <string name="date_range">Tarih Aralığı</string>
    <string name="dot">…</string>
    <string name="language">Dil</string>
    <string name="sort">Sırala</string>
    <string name="result">Sonucları Getir</string>

    <!-- fragment_home -->
    <string name="title_home">Home Fragment</string>
    <string name="searching">Arama</string>
    <string name="filter">Filtre</string>
    <string name="choose_country">Ülke Seç</string>
    <string name="choose_language">Dil Seç</string>
    <string name="detail_fragment">Detail Fragment</string>
    <string name="comeback">Dön</string>
    <string name="title_card">Lorem Ipsum Dolor Dit Amet, Consectetur Adipiscing Elit</string>
    <string name="desc_card">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu r</string>
    <string name="author_card">Ayşe Kaya</string>
    <string name="date_card">07.08.2020</string>

</resources>
