<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchFragment">

    <TextView
        android:id="@+id/textViewSearchRootName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alegreya_sans_bold"
        android:letterSpacing="0.03"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="#3a84db"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewSearchRootName"
        app:layout_scrollFlags="scroll|enterAlways">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp">


            <EditText
                android:layout_width="280dp"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="9dp"
                android:enabled="false"
                android:focusableInTouchMode="true"
                android:hint="@string/search"
                android:paddingStart="19dp"
                android:textSize="13sp"
                android:inputType="none"
                android:importantForAutofill="no"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:background="@drawable/custom_edittext"
                android:enabled="false"
                android:focusableInTouchMode="true"
                android:paddingLeft="11dp"
                android:paddingTop="8dp"
                android:paddingRight="11dp"
                android:paddingBottom="8dp"
                android:text="@string/lng_lng"
                android:textColor="@color/Maviii"
                android:textSize="14sp"
                android:inputType="none"
                android:importantForAutofill="no"
                tools:ignore="LabelFor,RelativeOverlap" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/toolbar_home">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alegreya_sans_bold"
                    android:text="@string/search_content"
                    android:textColor="@color/aciksiyah"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editTextContentSearch"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="17dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableEnd="@drawable/ic_search"
                    android:hint="@string/search"
                    android:paddingStart="19dp"
                    android:paddingEnd="17dp"
                    android:textSize="13sp"
                    android:inputType="text"
                    android:importantForAutofill="no" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="23dp"
                android:layout_marginRight="20dp"
                android:background="@color/view" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alegreya_sans_bold"
                    android:text="@string/search_titles"
                    android:textColor="@color/aciksiyah"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editTextTitleSearch"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="17dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableEnd="@drawable/ic_search"
                    android:hint="@string/search"
                    android:paddingStart="19dp"
                    android:paddingEnd="17dp"
                    android:textSize="13sp"
                    android:importantForAutofill="no"
                    android:inputType="text" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="23dp"
                android:layout_marginRight="20dp"
                android:background="@color/view" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alegreya_sans_bold"
                    android:text="@string/date_range"
                    android:textColor="@color/aciksiyah"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <EditText
                        android:id="@+id/editTextDateTo"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginTop="17dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="5"
                        android:background="@drawable/custom_edittext"
                        android:drawableEnd="@drawable/ic_calendar"
                        android:enabled="false"
                        android:hint="@string/dot"
                        android:paddingStart="19dp"
                        android:paddingEnd="17dp"
                        android:textSize="13sp"
                        android:importantForAutofill="no"
                        android:inputType="none"
                        tools:ignore="TextFields" />

                    <EditText
                        android:id="@+id/editTextDateFrom"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginTop="17dp"
                        android:layout_weight="5"
                        android:background="@drawable/custom_edittext"
                        android:drawableEnd="@drawable/ic_calendar"
                        android:enabled="false"
                        android:hint="@string/dot"
                        android:paddingStart="19dp"
                        android:paddingEnd="17dp"
                        android:textSize="13sp"
                        android:inputType="none"
                        android:importantForAutofill="no"
                        tools:ignore="TextFields" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="23dp"
                android:layout_marginRight="20dp"
                android:background="@color/view" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alegreya_sans_bold"
                    android:paddingStart="5dp"
                    android:text="@string/language"
                    android:textColor="@color/aciksiyah"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerviewSearchLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/grid_list_language" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="23dp"
                android:layout_marginRight="20dp"
                android:background="@color/view" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/alegreya_sans_bold"
                android:paddingStart="5dp"
                android:text="@string/sort"
                android:textColor="@color/aciksiyah"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <ExpandableListView
                android:id="@+id/expandableListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="18dp"
                android:divider="@android:color/background_light"
                android:dividerHeight="0.5dp"
                android:nestedScrollingEnabled="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/list_group" />

            <Button
                android:id="@+id/buttonSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="17dp"
                android:background="@drawable/button_shape"
                android:fontFamily="@font/alegreya_sans_medium"
                android:text="@string/result"
                android:textAllCaps="false"
                android:textColor="@color/beyaz"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>