<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.HomeFragment"
    android:background="@android:color/white"
    >
    <TextView
        android:id="@+id/textViewHomeRootName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alegreya_sans_bold"
        android:letterSpacing="0.03"
        android:text="@string/title_home"
        android:textAlignment="center"
        android:textColor="#3a84db"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/textViewHomeRootName"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarhome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways"
            >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_collapseMode="parallax"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayoutRoot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:animateLayoutChanges="true">

                    <LinearLayout
                        android:id="@+id/linearLayoutChoose"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:weightSum="10"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:animateLayoutChanges="true">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/constraintLayoutSearch"
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:layout_marginEnd="3dp"
                            android:layout_weight="5"
                            android:background="@drawable/rectangle"
                            >

                            <ImageView
                                android:id="@+id/imageViewSearch"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:paddingStart="14dp"
                                android:src="@drawable/ic_search"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/textViewSearch"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_toEndOf="@id/imageViewSearch"
                                android:fontFamily="@font/alegreya_sans_medium"
                                android:paddingStart="7dp"
                                android:text="@string/searching"
                                android:textColor="@color/acikgri"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toEndOf="@id/imageViewSearch"
                                app:layout_constraintTop_toTopOf="parent" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/constraintLayoutFilter"
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:layout_marginStart="3dp"
                            android:layout_weight="5"
                            android:background="@drawable/rectangle"
                            >

                            <ImageView
                                android:id="@+id/imageViewFilter"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:paddingStart="14dp"
                                android:src="@drawable/ic_filter"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                tools:ignore="ContentDescription" />

                            <TextView
                                android:id="@+id/textViewFilter"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_toEndOf="@id/imageViewFilter"
                                android:fontFamily="@font/alegreya_sans_medium"
                                android:paddingStart="7dp"
                                android:text="@string/filter"
                                android:textColor="@color/acikgri"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toEndOf="@id/imageViewFilter"
                                app:layout_constraintTop_toTopOf="parent" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayoutFilter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/linearLayoutChoose"
                        android:layout_marginRight="19dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal"
                        android:visibility="gone"
                        android:weightSum="10"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/linearLayoutChoose">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/constraintLayoutCountry"
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:layout_marginTop="9dp"
                            android:layout_marginEnd="3dp"
                            android:layout_weight="5"
                            android:background="@drawable/rectangle"
                            >

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"
                                android:layout_marginEnd="15dp"
                                android:paddingStart="14dp"
                                android:src="@drawable/ic_down_arrow"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />


                            <TextView
                                android:id="@+id/textViewCountryName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="14dp"
                                android:fontFamily="@font/alegreya_sans_medium"
                                android:text="@string/choose_country"
                                android:textColor="@color/acikgri"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                tools:ignore="RelativeOverlap" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/constraintLayoutLanguage"
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:layout_marginStart="3dp"
                            android:layout_marginTop="9dp"
                            android:layout_weight="5"
                            android:background="@drawable/rectangle">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"
                                android:layout_marginEnd="15dp"
                                android:paddingStart="14dp"
                                android:src="@drawable/ic_down_arrow"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/textViewLanguage"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="14dp"
                                android:fontFamily="@font/alegreya_sans_medium"
                                android:text="@string/choose_language"
                                android:textColor="@color/acikgri"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                tools:ignore="RelativeOverlap" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_home"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/card_view" />

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/linearlayoutNoNews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity=""
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <ImageView
            android:id="@+id/imageViewFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_news" />

        <TextView
            android:id="@+id/textViewFav2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageViewFavorite"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/alegreya_sans_medium"
            android:text="Haberler burada gözükecek."
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textViewFav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewFav2"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/alegreya_sans_medium"
            android:text="Şu An Haber Yok"
            android:textSize="28sp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pb_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <net.bohush.geometricprogressview.GeometricProgressView
            android:id="@+id/progresView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            app:gp_color="@android:color/darker_gray"
            app:gp_duration="800"
            app:gp_figure_padding="3dp"
            app:gp_number_of_angles="7"
            app:gp_type="triangle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
